# uengine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  compile_triangle_shader.bat  generate_projects.bat  premake5.lua
client/: CMakeLists.txt  imgui.ini  premake5.lua
client/assets/shaders/: color.glsl  texture.glsl  triangle.frag  triangle.vert
client/include/: client_application.h
client/source/: main.cpp
client/src/: client_application.cpp
core/: CMakeLists.txt  premake5.lua
core/dependencies/glad/: CMakeLists.txt  premake5.lua
core/dependencies/glad/include/glad/: glad.h
core/dependencies/glad/src/: glad.c
core/dependencies/vulkan/: .gitignore  InstallationLog.txt  components.xml  maintenancetool.ini  premake5.lua
core/dependencies/vulkan/Config/: vk_layer_settings.txt
core/include/: uengine.h
core/include/uengine/: application.h  assertion.h  component.h  core.h  delegates.h  editor.h  entity.h  events.h  gui.h  input.h  layer_stack.h  log.h  math.h  rendering.h  scene.h  time.h  transform.h  window.h
core/include/uengine/core/: application.h
core/include/uengine/imgui/: imgui_layer.h
core/include/uengine/math/: matrix4x4.h  quaternion.h  vector2.h  vector3.h  vector4.h
core/include/uengine/rendering/: camera.h  frame_buffer.h  gl.h  graphics.h  graphics_api.h  graphics_buffer.h  index_format.h  mesh.h  shader.h  texture.h  vertex_array.h  vertex_attribute_descriptor.h  vertex_buffer.h
core/include/uengine/rendering/opengl/: opengl_graphics_api.h  opengl_graphics_buffer.h  opengl_index_buffer.h  opengl_mesh.h  opengl_texture_2d.h  opengl_vertex_buffer.h
core/include/uengine/rendering/vulkan/: vulkan_shader.h
core/include/uengine/windows/: windows_input.h  windows_window.h
core/source/uengine/core/: application.cpp  application.h  application_platform.h  assertion.h  component.h  configuration.h.in  delegates.h  entity.h  entry_point.h  event.h  export.h  input.h  keycodes.h  layer.h  layer_stack.cpp  log.cpp  log.h  memory.h  rectangle.cpp  scene.h  scene_manager.cpp  system_manager.cpp  time.cpp  time.h  types.h  window.cpp  window.h
core/source/uengine/core/windows/: windows_input.cpp  windows_input.h  windows_window.cpp
core/source/uengine/editor/: editor.h  editor_gui.h  editor_window.h
core/source/uengine/gui/: gui.cpp  gui.h
core/source/uengine/math/: math.cpp  math.h  matrix3x3.cpp  matrix3x3.h  matrix4x4.cpp  matrix4x4.h  quaternion.cpp  quaternion.h  vector2.cpp  vector2.h  vector2int.cpp  vector2int.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
core/source/uengine/rendering/: color.cpp  color.h  framebuffer.cpp  framebuffer.h  gl.h  graphics.cpp  graphics.h  graphics_api.cpp  graphics_api.h  graphics_buffer.cpp  index_buffer.h  mesh.cpp  shader.cpp  shader.h  texture_2d.cpp  vertex_attribute_descriptor.h  vertex_buffer_layout.h
core/source/uengine/rendering/opengl/: opengl_graphics_api.cpp  opengl_graphics_api.h  opengl_graphics_buffer.cpp  opengl_index_buffer.cpp  opengl_mesh.cpp  opengl_shader.h  opengl_texture_2d.cpp  opengl_texture_2d.h  opengl_vertex_buffer.cpp
core/source/uengine/rendering/vulkan/: vulkan_graphics_api.cpp  vulkan_graphics_api.h
core/src/uengine/: application.cpp  entity.cpp  input.cpp  layer_stack.cpp  log.cpp  scene.cpp  time.cpp  window.cpp
core/src/uengine/core/: application.cpp  application.h  assertion.h  component.h  delegates.h  entity.cpp  entity.h  entity_manager.cpp  entity_manager.h  events.h  input.cpp  input.h  layer_stack.h  log.cpp  log.h  rectangle.h  scene.cpp  scene_manager.h  script.h  script_manager.cpp  script_manager.h  script_system.h  system.h  system_manager.cpp  system_manager.h  time.cpp  time.h  transform.h
core/src/uengine/core/windows/: windows_input.cpp  windows_input.h  windows_time.cpp  windows_time.h  windows_window.cpp  windows_window.h
core/src/uengine/editor/: editor_gui.cpp  editor_window.cpp
core/src/uengine/gui/: gui.cpp  gui.h  gui_layer.cpp  gui_layer.h
core/src/uengine/imgui/: imgui_layer.cpp  imgui_layer.h
core/src/uengine/math/: matrix4x4.cpp  matrix4x4.h  quaternion.cpp  vector2.cpp  vector2.h  vector2_int.cpp  vector2_int.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
core/src/uengine/rendering/: camera.h  color.h  frame_buffer.cpp  frame_buffer.h  gl.cpp  gl.h  graphics.cpp  graphics_api.cpp  graphics_api.h  graphics_api_type.h  graphics_apis.h  index_buffer.cpp  light.h  shader.cpp  shader.h  texture_2d.cpp  texture_2d.h  vertex_array.cpp  vertex_attribute_descriptor.h  vertex_buffer.cpp  vertex_buffer_layout.h
core/src/uengine/rendering/opengl/: opengl_frame_buffer.cpp  opengl_frame_buffer.h  opengl_framebuffer.cpp  opengl_framebuffer.h  opengl_graphics_api.cpp  opengl_graphics_api.h  opengl_index_buffer.cpp  opengl_shader.cpp  opengl_shader.h  opengl_texture_2d.cpp  opengl_vertex_array.cpp  opengl_vertex_array.h  opengl_vertex_buffer.cpp
core/src/uengine/rendering/vulkan/: vulkan_graphics_api.cpp  vulkan_graphics_api.h
core/src/uengine/windows/: windows_input.cpp  windows_window.cpp
dependencies/glfw/: .gitignore
dependencies/stb/: CMakeLists.txt
editor/: imgui.ini  premake5.lua
editor/assets/shaders/: color.glsl  texture.glsl  uv.glsl
editor/include/: editor_application.h  editor_camera.h  editor_layer.h  game_window.h  scene_hierarchy_editor.h  scene_hierarchy_window.h
editor/source/: main.cpp
include/: uengine.h
source/uengine/core/: application.cpp  application.h  assertion.h  delegates.h  entry_point.h  event.h  input.cpp  input.h  log.h  memory.h  window.cpp  window.h
source/uengine/math/: math.cpp  math.h  matrix4x4.h  quaternion.h  vector.h  vector2.cpp  vector2.h  vector3.h  vector4.h
source/uengine/rendering/: graphics.h  graphics_buffer.h  mesh.h  shader.h  texture.h  vertex_buffer_layout.h
